fixed problem with css in cardwrap

--- a/FP-UnityXperience/src/components/Button/Button.css
+++ b/FP-UnityXperience/src/components/Button/Button.css
@@ -1,6 +1,8 @@
 button {
     color: white;
     border-radius: 8px;
+    min-width: 200px;
+    min-height: 40px;
     border: 1px solid transparent;
     padding: 0.6em 1.2em;
     font-size: 1em;
