--- a/FP-UnityXperience/src/screens/Contact/Contact.css
+++ b/FP-UnityXperience/src/screens/Contact/Contact.css
@@ -11,14 +11,6 @@ h3{
     font-size: 20px;
 }
 
-.children-container {
-    display: flex;
-    flex-direction: column;
-    padding: 10%;
-    gap: 10%; 
-}
 
 
-.children-container > * {
-    flex: 1; 
-}
+
